<resources>
    <string name="app_name">BuilderStorm</string>
    <string name="submit">Submit</string>
    <string name="btn_labour">Add New Labour</string>
    <string name="workspace">workspace</string>
    <string name="workspace_url">Your Builderstorm workspace URL</string>
    <string name="delete_content_pdf">Delete the Pdf File?</string>
    <string name="delete_content_dwg">Delete the Dwg File?</string>
    <string name="delete_content_otf">Delete the other type File?</string>
    <string name="ok">OK</string>
    <string name="addCommentText">Enter your comment here</string>
    <string name="action_model_title">Action Model :-</string>
    <string name="storage_permission_required">Permission is required to store your file.</string>
    <string name="camera_permission_required">Permission is required to capture images.</string>
    <string name="camera_permission_denied">You need to allow access to camera on your device.</string>
    <string name="storage_permission_denied">You need to allow access to media files on your device.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="something_went_wrong">Something went wrong, Please try again later.</string>
    <string name="image_not_found">Image not found</string>
    <string name="no_internet">No internet connection</string>
    <string name="login">Login</string>
    <string name="date_issued">Date Issued</string>
    <string name="title">Title</string>
    <string name="due_date">Due Date</string>
    <string name="status">Status</string>
    <string name="no_data_found">No data found</string>
    <string name="created_date">created date</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="description">Description</string>
    <string name="rfi_comments">RFI Comments</string>
    <string name="add_rfi">Add RFI</string>
    <string name="add_project">Add Project</string>
    <string name="answer_hint">Answer</string>
    <string name="answer_by">Answer By</string>
    <string name="answer">Answer</string>
    <string name="enter_answer_here">Enter answer here</string>
    <string name="enter_value_here"></string>
    <string name="select_value_here">--Select--</string>
    <string name="chip_ellipsis">&#8230;</string>
    <string name="share_rfi">Share RFI</string>
    <string name="share_rfi_title">RFI Share</string>
    <string name="share_document">Share Document</string>
    <string name="share_any">Share</string>
    <string name="select_cc_users">Select CC Users</string>
    <string name="select_to_users">Select To Users</string>
    <string name="files">Files</string>
    <string name="please_fill_one_from_to_cc">Please fill either \'To Users\' or \'CC Users\' field</string>
    <string name="please_fill_to_users">Please fill \'To Users\' field</string>
    <string name="no_comments_found">No comments found</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="add_files">Add Files</string>
    <string name="sync">Sync</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="add_snag_list">Add Snag</string>
    <string name="snag_list">Snag List</string>
    <string name="mark_as">Mark As</string>
    <string name="upload">Upload</string>
    <string name="add_snag_list_title">Add Snag List</string>
    <string name="sub_contract_pack">Insert Sub Contract Package No.</string>
    <string name="location">Location</string>
    <string name="share_snag">Share Snag</string>
    <string name="select_date">Select Date</string>
    <string name="select_category">Select Category</string>
    <string name="add_daily_diary">Add Daily Diary</string>
    <string name="my_items">My Items</string>
    <string name="diary">Diary</string>
    <string name="user">User</string>
    <string name="submitted">Submitted</string>
    <string name="required_field">Required Field</string>
    <string name="share_content">Share</string>
    <string name="create_gallery">Create Gallery</string>
    <string name="sure_to_delete_image">Do you want to delete the image?</string>
    <string name="cancel">Cancel</string>
    <string name="add_drawing">Add Drawing</string>
    <string name="pdf">PDF</string>
    <string name="dwg">DWG</string>
    <string name="number_of">No.</string>
    <string name="rev">Rev.</string>
    <string name="add">Add</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="check_overtime">I have not carried out any overtime</string>
    <string name="check_break_taken">I have taken the standard breaks</string>
    <string name="overtime">OverTime</string>
    <string name="breaks">Breaks</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>
    <string name="add_overtime">Add Overtime</string>
    <string name="add_task">Add Tasks</string>
    <string name="add_break">Add Break</string>
    <string name="created_document">Create Document</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="date">Date</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="general_settings">General Settings</string>
    <string name="logout">Logout</string>
    <string name="syncing_all">Syncing All</string>
    <string name="enter_drawing_name">Enter drawing name</string>
    <string name="enter_drawing_number">Enter drawing number</string>
    <string name="enter_revision_name">Enter revision name</string>
    <string name="please_select_pdf_file">Please select Pdf file.</string>
    <string name="please_select_dwg_file">Please select Dwg file.</string>
    <string name="please_select_oft_file">Please select any type file.</string>
    <string name="no_empty_comment">Comment must not be empty.</string>
    <string name="label_text">Label</string>
    <string name="no_fields_available">No fields available</string>
    <string name="template">Template</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="retrofit_failure">There might be an error. Please, try again later.</string>
    <string name="no_version_updated">Your application is up to date.\n Version: %s</string>
    <string name="no_preview_available">No preview available</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_workspace">Change Workspace?</string>
    <string name="oth">OTH</string>
    <string name="no_data_online">No data available due to a poor connection. Please, try again shortly.</string>
    <string name="support">Having Problems?</string>
    <string name="report_problem">Report A Problem</string>
    <string name="des_problem">Describe your problem</string>
    <string name="label_signature">Signature:</string>
    <string name="enter_pin_here">Enter pin here</string>
    <string name="poor_connections_message">Poor internet connection. Please, try again shortly.</string>
    <string name="login_with_pin">Login with Pin</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="create_pin">Create Pin</string>
    <string name="app_new_version_available">A new version of application is available. Do you want to update the application with new version?</string>
    <string name="default_time">00:00</string>
    <string name="save_add_more"><![CDATA[Save & Add More]]></string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="select_task">Select Task</string>
    <string name="enter_text">Enter Text:</string>
    <string name="select_project">Select Project</string>
    <string name="select_item">Select item</string>
    <string name="processed_time_sheet">Your time sheet for this period had been processed. You cannot modify the existing times.</string>
    <string name="no_of_hours">Enter No. of Hours</string>
    <string name="create_note">Create Note</string>
    <string name="no_item_available">No item available</string>
    <string name="update">Update</string>
    <string name="earlier_start_time">Start time must be earlier than end time.</string>
    <string name="no_overview_details_found">No overview details found</string>
    <string name="add_documents">Add Document</string>
    <string name="all_documents">All Documents</string>
    <string name="all_category">All Categories</string>
    <string name="all_users">Select User</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="old_pin">Old pin</string>
    <string name="upload_images">Upload Images</string>
    <string name="enter_file_title">Enter File Title</string>
    <string name="select_status">Select Status</string>
    <string name="select_stage">Select Stage</string>
    <string name="revision">Revision</string>
    <string name="pinned_comment">Pinned Comment</string>
    <string name="add_company_document">Add Company Document</string>
    <string name="edit_company_document">Edit Company Document</string>
    <string name="no_project_available">No project available</string>
    <string name="select_your_file">Select your file</string>
    <string name="storage_permission_needed">Storage permission required</string>
    <string name="header_document">Document</string>
    <string name="share_company_document">Share Company Document</string>
    <string name="success_added_gallery">Gallery Added Successfully.</string>
    <string name="success_gallery_delete">Gallery Deleted Successfully.</string>
    <string name="success_snag_sync">Snag synced successfully.</string>
    <string name="error_incorrect_pin">Incorrect Pin</string>
    <string name="success_document_added">Document added successfully.</string>
    <string name="terms_policy"><![CDATA[Terms&Conditions and Privacy Policy]]></string>
    <string name="not_enough_permission">You don\'t have enough permissions</string>
    <string name="no_time_sheet_date_message">There is no timesheet activity performed on %s</string>
    <string name="no_over_view_found">No Overview found</string>
    <string name="success_document_synced">Document synced successfully.</string>
    <string name="success_mark_resolved">Document completed successfully.</string>
    <string name="doc_already_synced">Document already synced.</string>
    <string name="success_data_saved">Data saved successfully.</string>
    <string name="back_to_doc">Back to Documents</string>
    <string name="issued_by">Issued By</string>
    <string name="completed_for">Completed For</string>
    <string name="issue_doc">Issue Document</string>
    <string name="select_users">Select Users</string>
    <string name="select_user">Select User</string>
    <string name="labour_type">Labour Type</string>
    <string name="pay_type">Pay Type</string>
    <string name="number_on_site">No.On Site</string>
    <string name="finish_time">Finish Time</string>
    <string name="total_hours">Total Hours</string>
    <string name="select_cost">Select Cost Code</string>
    <string name="please_fill_users">Please enter at least one users</string>
    <string name="select_issued_by">Select Issued By</string>
    <string name="distribution">Distribution</string>
    <string name="input_markup_file">Input Markup File</string>
    <string name="category">Category</string>
    <string name="upload_from_device">Upload from Device</string>
</resources>